fixed spacings

--- a/src/Pages/Games.css
+++ b/src/Pages/Games.css
@@ -37,6 +37,10 @@
     justify-content: center;
 }
 
+.orig {
+    transition: 1s all;
+}
+
 .orig .name{
     display: none;
 }
@@ -50,7 +54,7 @@
 .gamecard_container {
     padding-left: 5%;
     padding-right: 5%;
-    padding-top: 20%;
+    padding-top: 25%;
     padding-bottom: 5%;
 }
 
@@ -59,6 +63,7 @@
     filter: brightness(1.3);
     padding: 20%;
     transition: 1s all;
+    padding-top: 35%;
 }
 
 .tags {
@@ -114,10 +119,6 @@
 
 
 .gamecard:hover {
-    /* border: 1px solid #ffffff44;
-    box-shadow: 0 7px 50px 10px #000000aa; */
-    transform: scale(1.015);
-    filter: brightness(1.3);
     ::before{
       filter: brightness(.5);
       top: -100%;
