--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -8,6 +8,7 @@
     flex-flow: column;
     overflow-x: hidden;
     align-items: center;
+    padding-top: 10%;
   }
 
   .title_img {
