--- a/src/Pages/TournamentScores.css
+++ b/src/Pages/TournamentScores.css
@@ -3,6 +3,7 @@
   width: 100%;
   position: absolute;
   overflow-x: scroll;
+  padding-top: 10%;
   }
 
   .tournament {
